--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 <div class="banner">
 <div class="navbar">
-<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/343958060_1174243459931849_1905797395389097120_n.png?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=I9t9iv4ZIG0AX8E5vMk&_nc_oc=AQm1sIz8GlnQRhYtTKwFyC1km66aODTqK3uJYOEwfZSfHPE0Q8BCXq4XsccfuBFDgu0&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDmtlx8SSTjd3W_utex9ytZ_3qT5GySZkpNmZygw_uqlA&oe=64B5410B">
+<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/343958060_1174243459931849_1905797395389097120_n.png?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=I9t9iv4ZIG0AX8E5vMk&_nc_oc=AQm1sIz8GlnQRhYtTKwFyC1km66aODTqK3uJYOEwfZSfHPE0Q8BCXq4XsccfuBFDgu0&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDmtlx8SSTjd3W_utex9ytZ_3qT5GySZkpNmZygw_uqlA&oe=64B5410B" class="logo">
 
 <ul class="menu">
 <li><a href="gpt.html">Home</a></li>
