--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
     <div class="about-container">
         
         <div class="image-container">
-            <img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/347117698_1644958369311618_7261615396155765410_n.jpg?stp=cp6_dst-jpg&_nc_cat=108&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=YFlL4H_K3wAAX8H0kNl&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfBnAI8YSywzENhZUerrjnUZBe2sUegfGHdHImS0gnBe3Q&oe=64AA2CBF">
+            <img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/347117698_1644958369311618_7261615396155765410_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=108&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=fC6aFJtEZVYAX99LScQ&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfAXwauaO09hf9GAQIZkR0gMJ0cYrKE34RnyFF1YXagfOw&oe=64B60A3F">
         </div>
   
         <div class="text-container">
