--- a/index.html
+++ b/index.html
@@ -124,29 +124,36 @@
 
 
 <!--image slider start-->
-<section class="container">
-  <div class="tekst">
-<h6>Gallery</h6>
-</div>
-	<div class="slider-wrapper">
-		<div class="slider">
-			<img id="slide-1" src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/354217603_156385744113813_8518229764094294333_n.jpg?stp=cp6_dst-jpg&_nc_cat=107&ccb=1-7&_nc_sid=730e14&_nc_ohc=soOTIBDvWG0AX8ViWzI&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfAm4O-qL2Be1jQ-aF7LtNXRiGWpfx5HpxkIZLpqMMzPoQ&oe=64B53534" alt="3D rendering of an imaginary orange planet in space" />
-			<img id="slide-2" src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/353417141_152394974512890_4567767494016875749_n.jpg?stp=cp6_dst-jpg&_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=Xq3txYHyw6kAX8g6qij&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfB6tOJfApbcAC4_ECx7-ETuHyLlb0oG8iC77vlvONkVIg&oe=64A8C6D3" alt="3D rendering of an imaginary green planet in space" />
-			<img id="slide-3" src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/354246766_152396087846112_7358403139280081801_n.jpg?stp=cp6_dst-jpg&_nc_cat=110&ccb=1-7&_nc_sid=730e14&_nc_ohc=B3LUQLXv8zcAX-tq-bD&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfCZGlRW8ViyZy1TqqT4qGO3ol6ee1Ue3_SfZ-mkFXOBOg&oe=64A8318F" alt="3D rendering of an imaginary blue planet in space" />
-      <img id="slide-4" src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/350664908_980253733128191_8292258317909461720_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=101&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=6d40xh1OH50AX9kcU0J&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfA9j2winDPkNPzo-CMuIjpbE3nweLgxwPYV5ziPOjFwtA&oe=64B65B0D" alt=""/>
-      <img id="slide-5" src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/349614191_1003874580665240_1349263761770357895_n.jpg?stp=cp6_dst-jpg&_nc_cat=100&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=AJiLwwG1NBAAX_QiDf0&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfBESJVbcNpOqm_-moxAL1fkm2PiCfgxfRVdkHSPPTvsKg&oe=64B5A1AF" alt=""/>
-      <img id="slide-6" src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/345450831_759296718981888_2900825721871801028_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=1loSOmqYuu4AX-8Dmok&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfCp--YO4g4HdVPIRBWwdykw-2SvMoWBnjYwYU6iLKluHA&oe=64B54260" />
-		<div class="slider-nav">
-			<a href="#slide-1"></a>
-			<a href="#slide-2"></a>
-			<a href="#slide-3"></a>
-      <a href="#slide-4"></a>
-      <a href="#slide-5"></a>
-      <a href="#slide-6"></a>
-      
+<div class="full-img" id="fullImgBox">
+<img src="" id="fullImg">
+<
+
+	</div>
+	<div class="img-gallery">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/357553473_166907659728288_2761612619172218301_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=X3FLe6rd_TIAX8fS7-h&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDzecO_DdLFfqXNDzsc6RbvYfF013DcXQnixQfGDO3aQA&oe=64B6A339" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/357571254_166908176394903_3273630907523121025_n.jpg?stp=cp6_dst-jpg&_nc_cat=102&ccb=1-7&_nc_sid=730e14&_nc_ohc=-s1teqE5rRwAX9eU5pU&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfCjUMXEpsCLPJzg2vmTbG5HXNnVmY_J2VpyobODDK8YDQ&oe=64B8D852" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/358605436_166908273061560_6573787487964780423_n.jpg?stp=cp6_dst-jpg&_nc_cat=103&ccb=1-7&_nc_sid=730e14&_nc_ohc=IVFJS2pW108AX-EmhjK&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfCJ2T9qM7RDWtaPteJsLJ3a30vfgM3TGywm7aFr9n88Ng&oe=64B7A757" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/353009516_152394624512925_5935926082816866136_n.jpg?stp=cp6_dst-jpg&_nc_cat=110&ccb=1-7&_nc_sid=730e14&_nc_ohc=28XTc-u-udYAX8E_pgz&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDPtfyG3t3DGzRIemZLOOQ4cWKxINxijI3brKK5rGwtWg&oe=64B7FCF7" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/353002695_152394731179581_2812585187582713867_n.jpg?stp=cp6_dst-jpg&_nc_cat=110&ccb=1-7&_nc_sid=730e14&_nc_ohc=KKzgqOHH_IAAX84t4L-&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDqtMVNaYYrT0__GgjAms7bxG2MPk7y1jE8_sTghYU_uw&oe=64B8C04D" onclick="openFullImg(this.src)" >
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/350664908_980253733128191_8292258317909461720_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=101&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=uBFjSQw1uTMAX9EGEWn&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfBn36fg1iy59AtTEoyYRvQv9qf_fXfio46Sg-OocMvY5Q&oe=64B8554D" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/351330717_113873691727175_1526421819159324246_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=qZEKiVgXo5oAX_AADlo&_nc_oc=AQmpAioQjWEWurFEE3XG18EVgRhpBTJAPkvn5jRLYjvOOSEIMFg_P2DozZD8D9Dlj3M&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfBXvFoO0C0EEHkgHI-6ggofsAFq_3Rc5XTITW6sCEaYmQ&oe=64B76667" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/351813157_6329352213770282_1114306349338962946_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=aUYR5z6hFKAAX-msW8_&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDztaBrR9DAYZRKa0wTz398Nr3ZQ7IjIESgEyYeRBg8Hw&oe=64B821C5" onclick="openFullImg(this.src)">
+		<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/350956504_3535821866736969_1086327571759245401_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=gt3_LWULk-EAX9koZZs&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDO6EZYA0r3Gzph5AReXqDoZclnTheZYQKebyoAdpL_FQ&oe=64B70FAE" onclick="openFullImg(this.src)">
 		</div>
 	</div>
-</section>
+	<script>
+var fullImgBox = document.getElementById("fullImgBox");
+var fullImg = document.getElementById("fullImgBox");
+
+function openFullImg(pic){
+	fullImgBox.test.display = "flex";
+	fullImg.src = pic;
+}
+
+function closeFullImg(){
+	fullImgBox.style.display = "none";
+}
+		</script>
 
 <div class="wrapper">
 
