--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <!--image slider start-->
 <div class="full-img" id="fullImgBox">
-<img src="" id="fullImg">
+<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/357553473_166907659728288_2761612619172218301_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=X3FLe6rd_TIAX8fS7-h&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDzecO_DdLFfqXNDzsc6RbvYfF013DcXQnixQfGDO3aQA&oe=64B6A339" id="fullImg">
 <
 
 	</div>
