--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 	</div>
 	<script>
 var fullImgBox = document.getElementById("fullImgBox");
-var fullImg = document.getElementById("fullImgBox");
+var fullImg = document.getElementById("fullImg");
 
 function openFullImg(pic){
-	fullImgBox.test.display = "flex";
+	fullImgBox.style.display = "flex";
 	fullImg.src = pic;
 }
 
