--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ function closeFullImg(){
   <table>
   <tr>
   <td>Email</td>
-  <td>ryancorson363728@gmail.com</td>
+  <td>ryancorson363728@</br>gmail.com</td>
   </tr>
   <tr>
   <td>Phone</td>
@@ -307,8 +307,8 @@ function closeFullImg(){
  
        <div class="box">
           <h3>contact info</h3>
-          <a href="#" class="link"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-          <a href="#" class="link"> <i class="fas fa-phone"></i> +111-222-3333 </a>
+          <a href="#" class="link"> <i class="fas fa-phone"></i> +1 513-417-7023 </a>
+          <a href="#" class="link"> <i class="fas fa-facebook"></i> Facebook </a>
           <a href="#" class="link"> <i class="fas fa-envelope"></i> mail </a>
           <a href="#" class="link"> <i class="fas fa-map"></i>mjesto </a>
        </div>
