--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ function closeFullImg(){
           <h3>contact info</h3>
           <a href="#" class="link"> <i class="fas fa-phone"></i> +1 513-417-7023 </a>
           <a href="https://www.facebook.com/profile.php?id=100092271649748" class="link"> <i class="fas fa-facebook"></i> Facebook </a>
-          <a href="#" class="link"> <i class="fas fa-envelope"></i> ryancorson363728@gmail.com </a>
+          <a href="mailto: ryancorson363728@gmail.com" class="link"> <i class="fas fa-envelope"></i> ryancorson363728@gmail.com </a>
           <a href="#" class="link"> <i class="fas fa-map"></i>Cincinnati, OH, United States, Ohio </a>
        </div>
  
