--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <p class="testimonial-author">- Jane Smith</p>
     </div>
     <div class="testimonial">
-      <img src="https://www.vecteezy.com/free-vector/avatar-icon" alt="Testimonial 2" class="testimonial-image">
+      <img src="https://cdn-icons-png.flaticon.com/512/4128/4128253.png" alt="Testimonial 2" class="testimonial-image">
       <p class="testimonial-text">Got in touch with Ryan, he and Steven did an AMAZING job, and I could not be happier! Ryan is very reliable, and communicated with me what the goal was, then got it done! Highly recommend Ryan. Will be using him in the future. </p>
       <p class="testimonial-author">- Connie Holland</p>
     </div>
