--- a/gallery.html
+++ b/gallery.html
@@ -42,8 +42,9 @@
 
 </div>
 <div class="full-img" id="fullImgBox">
-<img src="" id="fullImg">
-<
+<img src="https://scontent.fsjj1-1.fna.fbcdn.net/v/t39.30808-6/357553473_166907659728288_2761612619172218301_n.jpg?stp=cp6_dst-jpg_s600x600&_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=X3FLe6rd_TIAX8fS7-h&_nc_ht=scontent.fsjj1-1.fna&oh=00_AfDzecO_DdLFfqXNDzsc6RbvYfF013DcXQnixQfGDO3aQA&oe=64B6A339" id="fullImg">
+<span onclick="closeFullImg()">X</span>
+
 
 	</div>
 	<div class="img-gallery">
@@ -60,10 +61,10 @@
 	</div>
 	<script>
 var fullImgBox = document.getElementById("fullImgBox");
-var fullImg = document.getElementById("fullImgBox");
+var fullImg = document.getElementById("fullImg");
 
 function openFullImg(pic){
-	fullImgBox.test.display = "flex";
+	fullImgBox.style.display = "flex";
 	fullImg.src = pic;
 }
 
