--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 <div class="section" id="Services">
 
   <div class="title">
-  <h1>Our Services</h1>
+  <h1 class="hidden">Our Services</h1>
   </div>
   <div class="services">
   <div class="card">
   <div class="icon">
   <i class=" fa-solid fa-seedling" ></i>
   </div>
-  <h2>Landscaping</h2>
-  <p>Our services encompass every aspect of landscaping, from concept to completion. We offer a comprehensive range of services, including landscape design, installation, maintenance, hardscaping, irrigation systems, and outdoor lighting. Whatever your landscaping needs may be, we have the expertise and resources to meet them with exceptional quality and attention to detail.
+  <h2 class="hidden">Landscaping</h2>
+  <p class="hidden">Our services encompass every aspect of landscaping, from concept to completion. We offer a comprehensive range of services, including landscape design, installation, maintenance, hardscaping, irrigation systems, and outdoor lighting. Whatever your landscaping needs may be, we have the expertise and resources to meet them with exceptional quality and attention to detail.
   <a href="about.html" class="read-more">Read more</a>
   </p>
   
@@ -70,8 +70,8 @@
   <div class="icon">
   <i class=" fa-solid fa-hammer" ></i>
   </div>
-  <h2>Hardscaping</h2>
-  <p>Hardscaping is the art of incorporating non-living elements into your landscape, such as patios, walkways, retaining walls, decks, pergolas, outdoor kitchens, fire pits, and water features. These elements not only add structure and definition to your outdoor space but also provide practical areas for relaxation, entertainment, and recreation. With our expertise in hardscape design and installation, we can transform your yard into a functional and inviting extension of your home.
+  <h2 class="hidden">Hardscaping</h2>
+  <p class="hidden">Hardscaping is the art of incorporating non-living elements into your landscape, such as patios, walkways, retaining walls, decks, pergolas, outdoor kitchens, fire pits, and water features. These elements not only add structure and definition to your outdoor space but also provide practical areas for relaxation, entertainment, and recreation. With our expertise in hardscape design and installation, we can transform your yard into a functional and inviting extension of your home.
   <a href="about.html" class="read-more">Read more</a>
   </p>
   </div>
@@ -79,8 +79,8 @@
   <div class="icon">
   <i class=" fa-solid fa-tree" ></i>
   </div>
-  <h2>Tree remowal</h2>
-  <p>When it comes to tree removal, safety is our top priority. Our team is trained in industry best practices and follows strict safety protocols to protect both our crew and your property. We assess each tree removal project individually, taking into account factors such as tree size, location, surrounding structures, and potential hazards. Our arborists are skilled in using advanced rigging and cutting techniques to safely remove trees in even the most challenging situations.
+  <h2 class="hidden">Tree remowal</h2>
+  <p class="hidden">When it comes to tree removal, safety is our top priority. Our team is trained in industry best practices and follows strict safety protocols to protect both our crew and your property. We assess each tree removal project individually, taking into account factors such as tree size, location, surrounding structures, and potential hazards. Our arborists are skilled in using advanced rigging and cutting techniques to safely remove trees in even the most challenging situations.
   <a href="about.html" class="read-more">Read more</a>
   </p>
   </div>
