--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
   </div>
   </div>
 
+	<script>
+document.addEventListener("DOMContentLoaded", function() {
+  var sections = document.querySelectorAll(".hidden");
+
+  function checkVisibility() {
+    for (var i = 0; i < sections.length; i++) {
+      var position = sections[i].getBoundingClientRect().top;
+      var windowHeight = window.innerHeight;
+
+      if (position < windowHeight * 0.8) {
+        sections[i].classList.add("visible");
+      }
+    }
+  }
+
+  window.addEventListener("scroll", checkVisibility);
+  checkVisibility();
+});
+</script>
+
 
 
 
