--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ function closeFullImg(){
       </div>
 
       <div class="text-container">
-          <h1>About us</h1>
-          <p>We have more than 10 years of experience in landscaping, and plenty satisfied clients. <br> We understand that every client is unique, which is why we offer tailored solutions to suit your specific needs and preferences. Whether you're seeking a complete landscape transformation or require routine maintenance, our knowledgeable staff is here to assist you every step of the way.Contact us and get started. </p>
+          <h1 class="hidden">About us</h1>
+          <p class="hidden">We have more than 10 years of experience in landscaping, and plenty satisfied clients. <br> We understand that every client is unique, which is why we offer tailored solutions to suit your specific needs and preferences. Whether you're seeking a complete landscape transformation or require routine maintenance, our knowledgeable staff is here to assist you every step of the way.Contact us and get started. </p>
           <a href="contact.html">Contact Us</a>
       </div>
       
