--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@ function closeFullImg(){
 
 
 <div class="container1">
-  <h1>Connect with us</h1>
-  <p> Please for any question, fill this contact form and we will get back to you as soon as we can.</p>
+  <h1 class="hidden">Connect with us</h1>
+  <p class="hidden"> Please for any question, fill this contact form and we will get back to you as soon as we can.</p>
   <div class="contact-box">
   <div class="contact-left">
   <h3> Sent your query</h3>
